# langchain-azure-ai-inference-plus

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: basic_usage.py  embeddings_example.py
langchain_azure_ai_inference_plus/: __init__.py
tests/: conftest.py  test_embeddings.py  test_langchain_integration.py
